added calculator project

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     
 <ol>
     <li>  <a href="./image Gallery using HTML CSS JS/index.html">Image Gallery Task - 1</a>  </li>
-    <li> <a href="#">Portfolio Task - 2 </a></li>
+    <li> <a href="./Calculator/index.html">Calculator Task- 2 </a></li>
 </ol>    
 
 
