--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 <ol>
     <li>  <a href="./image Gallery using HTML CSS JS/index.html">Image Gallery Task - 1</a>  </li>
     <li> <a href="./Calculator/index.html">Calculator Task- 2 </a></li>
+    <li> <a href="./Portfolio/index.html"></a></li>
 </ol>    
 
 
