--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 <ol>
     <li>  <a href="./image Gallery using HTML CSS JS/index.html">Image Gallery Task9 - 1</a>  </li>
     <li> <a href="./Calculator/index.html">Calculator Task- 2 </a></li>
-    <li> <a href="./Portfolio/index.html">Portfolio Task - 3</a></li>
+    <li> <a href="./Portfolio1/index.html">Portfolio Task - 3</a></li>
 
-    <li><a href="./music/index.html">Music Streaming Using JS Task - 4</a></li>
+    <li><a href="./music1/index.html">Music Streaming Using JS Task - 4</a></li>
 </ol>    
 
 
