--- a/Portfolio1/index.html
+++ b/Portfolio1/index.html
@@ -56,7 +56,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/resume-example.pdf')"
+            onclick="window.open('./assets/resume.pdf')"
           >
             Download CV
           </button>
@@ -75,7 +75,7 @@
             src="./assets/github.png"
             alt="My Github profile"
             class="icon"
-            onclick="location.href='https://github.com/'"
+            onclick="location.href='https://github.com/gaikwadomg'"
           />
         </div>
       </div>
@@ -165,7 +165,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>SASS</h3>
+                  <h3>Version Control</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
@@ -177,7 +177,7 @@
                 />
                 <div>
                   <h3>JavaScript</h3>
-                  <p>Basic</p>
+                  <p>Experienced</p>
                 </div>
               </article>
               <article>
@@ -187,8 +187,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>TypeScript</h3>
-                  <p>Basic</p>
+                  <h3>React</h3>
+                  <p>Intermediate</p>
                 </div>
               </article>
               <article>
@@ -198,7 +198,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Material UI</h3>
+                  <h3>Bootstrap</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
@@ -214,8 +214,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>PostgreSQL</h3>
-                  <p>Basic</p>
+                  <h3>MongoDB</h3>
+                  <p>Intermediate</p>
                 </div>
               </article>
               <article>
