--- a/Portfolio1/index.html
+++ b/Portfolio1/index.html
@@ -56,7 +56,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/resume.pdf')"
+            onclick="window.open('./assets/Amazon.pdf')"
           >
             Download CV
           </button>
@@ -279,13 +279,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='../Calculator/index.html'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='../Calculator/index.html'"
               >
                 Live Demo
               </button>
@@ -303,13 +303,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='../image Gallery using HTML CSS JS/index.html'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='../image Gallery using HTML CSS JS/index.html'"
               >
                 Live Demo
               </button>
@@ -327,13 +327,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='#'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='#'"
               >
                 Live Demo
               </button>
@@ -358,7 +358,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:examplemail@gmail.com">ogaikwad103@gmail.com</a></p>
+          <p><a href="mailto:ogaikwad103@gmail.com">ogaikwad103@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
           <img
@@ -366,7 +366,7 @@
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="https://www.linkedin.com">LinkedIn</a></p>
+          <p><a href="https://www.linkedin.com/in/om-gaikwad-132b97238/">LinkedIn</a></p>
         </div>
       </div>
     </section>
