--- a/music1/about.html
+++ b/music1/about.html
@@ -57,7 +57,7 @@
 
 <footer class="footer">
     <div class="container">
-        <p>&copy; 2024 All rights reserved ! OMG@.</p>
+        <p>&copy; 2024 All rights reserved !</p>
         <div class="social-icons">
            
         </div>
