--- a/music1/index.html
+++ b/music1/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rash</title>
+    <title>Music</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 
@@ -77,7 +77,7 @@
 
 <footer class="footer">
     <div class="container">
-        <p>&copy; 2024 All rights reserved ! OMG@.</p>
+        <p>&copy; 2024 All rights reserved !.</p>
         <div class="social-icons">
            
         </div>
