--- a/index.html
+++ b/index.html
@@ -26,13 +26,20 @@
     a:hover{
         color: aqua;
     }
+    .ft{
+        font-size: 60px;
+    }
+
+    .ft2{
+        font-size: 25px;
+    }
 </style>
 <body>
 
-    <h1 class = "txt">Code Alpha Frontend Internship Tasks</h1>
+    <h1 class = "txt ft">Code Alpha Frontend Internship Tasks</h1>
 
     
-<ol>
+<ol class="ft2">
     <li>  <a href="./image Gallery using HTML CSS JS/index.html">Image Gallery Task9 - 1</a>  </li>
     <li> <a href="./Calculator/index.html">Calculator Task- 2 </a></li>
     <li> <a href="./Portfolio1/index.html">Portfolio Task - 3</a></li>
