--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     
 <ol class="ft2">
-    <li>  <a href="./image Gallery using HTML CSS JS/index.html">Image Gallery Task9 - 1</a>  </li>
+    <li>  <a href="./image Gallery using HTML CSS JS/index.html">Image Gallery Task - 1</a>  </li>
     <li> <a href="./Calculator/index.html">Calculator Task- 2 </a></li>
     <li> <a href="./Portfolio1/index.html">Portfolio Task - 3</a></li>
 
